--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="container">
             <p>Media query home-work</p>
             <div class="child-one"><p>I am red rectangle</p></div>
-            <div class="child-two"><p>I am red rectangle</p></div>
-            <div class="child-three"><p>I am red rectangle</p></div>
+            <div class="child-two"><p>I am blue rectangle</p></div>
+            <div class="child-three"><p>I am green rectangle</p></div>
         </div>
     
 </body>
