--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework</title>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
         <div class="container">
             <p>Media query home-work</p>
-            <div class="child-one"><p>I am red rectangle</p></div>
-            <div class="child-two"><p>I am blue rectangle</p></div>
-            <div class="child-three"><p>I am green rectangle</p></div>
+            <div class="red"><p>I am red rectangle</p></div>
+            <div class="blue"><p>I am blue rectangle</p></div>
+            <div class="green"><p>I am green rectangle</p></div>
         </div>
-    
 </body>
 </html>
